--- a/.github/workflows/new-post-notify.yml
+++ b/.github/workflows/new-post-notify.yml
@@ -13,15 +13,43 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Get changed post
+      - name: Parse new post info
         id: post
+        shell: bash
         run: |
-          FILE=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '^content/posts/.*\.md' | head -n 1)
-          echo "file=$FILE" >> $GITHUB_OUTPUT
+          # 1. 找到本次 push 中变动的文章（只取第一篇）
+          FILE=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} \
+            | grep '^content/posts/.*\.md' \
+            | head -n 1)
 
-          TITLE=$(grep '^title:' "$FILE" | head -n 1 | sed 's/title:[ ]*//')
-          SLUG=$(basename "$FILE" .md)
+          if [ -z "$FILE" ]; then
+            echo "No post file found."
+            exit 0
+          fi
 
+          echo "Detected post file: $FILE"
+
+          # 2. 读取 Front Matter（--- 包裹部分）
+          FRONT=$(sed -n '/^---$/,/^---$/p' "$FILE")
+
+          # 3. 解析 draft，草稿直接退出（不发邮件）
+          DRAFT=$(echo "$FRONT" | sed -n 's/^[[:space:]]*draft:[[:space:]]*//p' | head -n 1)
+          if [ "$DRAFT" = "true" ]; then
+            echo "Post is draft, skip notification."
+            exit 0
+          fi
+
+          # 4. 解析 title（允许前面有空格）
+          TITLE=$(echo "$FRONT" | sed -n 's/^[[:space:]]*title:[[:space:]]*//p' | head -n 1)
+
+          # 5. 解析 slug（优先用 slug）
+          SLUG=$(echo "$FRONT" | sed -n 's/^[[:space:]]*slug:[[:space:]]*//p' | head -n 1)
+
+          if [ -z "$SLUG" ]; then
+            SLUG=$(basename "$FILE" .md)
+          fi
+
+          # 6. 输出给后续 steps 使用
           echo "title=$TITLE" >> $GITHUB_OUTPUT
           echo "url=https://onedayoneday.xin/posts/$SLUG/" >> $GITHUB_OUTPUT
 
@@ -34,13 +62,15 @@ jobs:
           username: ${{ secrets.MAIL_USER }}
           password: ${{ secrets.MAIL_PASS }}
 
-          subject: "📢 OneDay Blog新文章发布：《${{ steps.post.outputs.title }}》"
           to: ${{ secrets.SUBSCRIBERS }}
-          from: "OneDay Blog Bot <${{ secrets.MAIL_USER }}>"
+          from: "OneDay Blog <${{ secrets.MAIL_USER }}>"
+
+          subject: "📢 新文章发布：《${{ steps.post.outputs.title }}》"
+
           body: |
             你好 👋
 
-            Oneday的博客刚刚发布了一篇新文章：
+            OneDay 的博客刚刚发布了一篇新文章：
 
             📌 标题：${{ steps.post.outputs.title }}
             🔗 链接：${{ steps.post.outputs.url }}
